--- a/batmanmoviesapp/src/styles/BatmanMovies.css
+++ b/batmanmoviesapp/src/styles/BatmanMovies.css
@@ -111,5 +111,6 @@ body {
   border-radius: 3px;
   font-family: 'Poiret One', cursive;
   font-size: 2em;
+  cursor: pointer;
 }
 /*# sourceMappingURL=BatmanMovies.css.map */
